compiler/testData/diagnostics/tests/extensions/contextReceivers/syntaxError.kt
// FIR_IDENTICAL
context(
<!SYNTAX!><!>fun foo() {
}